--- a/public/app/shared/menu/menuView.html
+++ b/public/app/shared/menu/menuView.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<!-- NAV BAR -->
-		<nav class="navbar navbar-default navbar-fixed-top">
+		<nav class="navbar navbar-default navbar-fixed-top" data-spy="affix" data-offset-top="2">
 		  <div class="container-fluid">
 			<div class="navbar-header">
 			  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
