--- a/public/app/shared/footer/footerView.html
+++ b/public/app/shared/footer/footerView.html
@@ -15,8 +15,8 @@
 
 
 	    <!-- MODAL ARTICOLO -->
-	    <div class="modal fade" id="articolo-modal">
-	      <div class="modal-dialog" role="document">
+	    <div class="modal fade" id="articolo-modal" >
+	      <div class="modal-admin" role="document">
 	        <div class="modal-content">   
 	          <div class="modal-header"> 
 	            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -28,26 +28,12 @@
 	            Inserire Titolo: <br>
 	            <input type="text" name="title" ng-model="title" placeholder="title"> <br><br>
 				<div class="pre-scrollable">
-					<div class="row" ng-repeat="immagine in listaImmagini" ng-if="$index % 3 == 0">
-						<div class="col-xs-4" >
-							<div class="thumbnail">
-								<img ng-src="{{listaImmagini[$index]}}" alt="...">	
-								<small class="text-muted">{{listaImmagini[$index]}}</small>		
-							</div>
-						</div>
-						<div class="col-xs-4" >
-							<div class="thumbnail">
-								<img ng-src="{{listaImmagini[$index+1]}}" alt="...">	
-								<small class="text-muted">{{listaImmagini[$index+1]}}</small>		
-							</div>
-						</div>
-						<div class="col-xs-4" >
-							<div class="thumbnail">
-								<img ng-src="{{listaImmagini[$index+2]}}" alt="...">	
-								<small class="text-muted">{{listaImmagini[$index+2]}}</small>		
-							</div>
+					<span ng-repeat="immagine in listaImmagini">
+						<div style="float:left;">
+							<img ng-src="{{immagine}}" alt="..." style="height:100px;">	<br>
+							<small class="text-muted">{{immagine}}</small>	
 						</div>						
-					</div>	
+					</span>
 				</div>
 	            <button type="file" ngf-select="inserisciImmagine($file, $invalidFiles)"
 	                    accept="image/*" ngf-max-height="1000" ngf-max-size="1MB">
