--- a/public/app/shared/footer/footerView.html
+++ b/public/app/shared/footer/footerView.html
@@ -74,13 +74,30 @@
 	          </div>
 	          <div class="modal-footer">
 	            <button ng-click="removeArticolo()" class="btn btn-default pull-left">Conferma</button>
-	            <button ng-click="annullaRimozione()"class="btn btn-default pull-left">Annulla</button>
+	            <button ng-click="annullaRimozione()" class="btn btn-default pull-left">Annulla</button>
 	          </div>
 	        </div>
 	      </div>
 	    </div>   
 
 
+	    <!-- CONFERMA RIMOZIONE COMMENTO -->
+	    <div class="modal fade" id="confermaRimozioneCommento-modal">
+	      <div class="modal-dialog" role="document">
+	        <div class="modal-content">  
+	          <div class="modal-header">
+	            <h6>Conferma Rimozione Commento</h6>
+	          </div>
+	          <div class="modal-body">
+	            <p>Sei sicuro di voler cancellare questo commento?</p>
+	          </div>
+	          <div class="modal-footer">
+	            <button ng-click="removeCommento()" class="btn btn-default pull-left">Conferma</button>
+	            <button ng-click="annullaRimozioneCommento()" class="btn btn-default pull-left">Annulla</button>
+	          </div>
+	        </div>
+	      </div>
+	    </div>  
 
 		<!-- FOOTER -->
 		<footer id="contattiLabel">
