--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
 <head>
 	<title>Sognatori Erranti</title>
 
+
+	<!-- FONT -->
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Alex Brush">
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Cormorant Infant">
+
 	<!-- JQUERY -->
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>	
 	<!-- BOOTSTRAP -->
