--- a/public/app/shared/menu/menuView.html
+++ b/public/app/shared/menu/menuView.html
@@ -13,7 +13,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>                        
 			  </button>
-			  <a class="navbar-brand" href="#"><strong>Sognatori <span>Erranti</span></strong></a>
+			  <span class="navbar-brand">Sognatori <span>Erranti</span></span>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 			  <ul class="nav navbar-nav navbar-right">
